--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,19 @@ html {
     height: 375px;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 form {
     display: flex;
     flex-direction: column;
 }
+
+.drawer {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  
